--- a/src/features/createOrder/addMediaFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addMediaFiles/UI/styles.module.scss
@@ -3,6 +3,13 @@
   grid-template: 1fr / 1fr 1fr;
   column-gap: 20px;
   width: 100%;
+  max-height: 70dvh;
+
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column-reverse;
+    row-gap: 20px;
+  }
 
   &.wrapper_empty {
     grid-template: none;
@@ -19,6 +26,22 @@
     transition:
       border-color 0.3s,
       background-color 0.3s;
+
+    @media (max-width: 992px) {
+      padding: 16px;
+      border-radius: 20px;
+      border: 2px dashed #4772e6;
+    }
+
+    @media (max-width: 768px) {
+      padding: 12px;
+      border-radius: 15px;
+      border: 1.5px dashed #4772e6;
+    }
+
+    @media (max-width: 576px) {
+      gap: 15px;
+    }
 
     .top {
       display: grid;
@@ -86,7 +109,15 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 600;
-          line-height: 0.75;
+          line-height: normal;
+
+          @media (max-width: 768px) {
+            font-size: 14px;
+          }
+
+          @media (max-width: 576px) {
+            font-size: 12px;
+          }
         }
 
         span {
