--- a/src/features/createOrder/calendar/UI/styles.module.scss
+++ b/src/features/createOrder/calendar/UI/styles.module.scss
@@ -1,22 +1,72 @@
 .open {
   display: grid;
-  grid-template: 1fr / 1fr 3fr;
-  justify-content: start;
+  grid-auto-flow: column;
   align-items: center;
   column-gap: 10px;
   justify-content: space-between;
 
+  @media (max-width: 576px) {
+  }
+
+  .icon {
+    width: 24px;
+
+    @media (max-width: 768px) {
+      width: 20px;
+    }
+
+    @media (max-width: 576px) {
+      width: 24px;
+    }
+
+    svg {
+      width: 100%;
+      height: auto;
+    }
+  }
+
   p {
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     color: var(--Personal-colors-main);
-    // overflow-wrap: break-word;
+    background: var(--Gradients-Gradient-1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+
+    @media (max-width: 768px) {
+      font-size: 12px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 14px;
+    }
   }
 
   .range {
     font-size: 12px;
+
+    span {
+      display: none;
+
+      @media (max-width: 576px) {
+        display: block;
+      }
+    }
+
+    @media (max-width: 768px) {
+      font-size: 10px;
+    }
+
+    @media (max-width: 576px) {
+      font-size: 14px;
+      display: grid;
+      grid-auto-flow: column;
+      gap: 10px;
+    }
   }
 }
 
@@ -29,6 +79,10 @@
   border-radius: 25px;
   background: var(--Personal-colors-White);
 
+  @media (max-width: 576px) {
+    padding: 15px;
+  }
+
   .top {
     display: grid;
     grid-auto-flow: column;
@@ -36,17 +90,38 @@
     justify-content: space-between;
     margin-bottom: 25px;
 
+    @media (max-width: 576px) {
+      margin-bottom: 10px;
+    }
+
     p {
       font-size: 24px;
+      font-weight: 500;
       font-style: normal;
-      font-weight: 400;
-      line-height: 12px; /* 50% */
       color: var(--Personal-colors-main);
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+
+      @media (max-width: 992px) {
+        font-size: 20px;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 16px;
+      }
     }
 
     svg {
       width: 20px;
       height: 20px;
+
+      @media (max-width: 576px) {
+        width: 14px;
+        height: 14px;
+      }
     }
   }
 
