--- a/src/features/createOrder/orderCard/UI/styles.module.scss
+++ b/src/features/createOrder/orderCard/UI/styles.module.scss
@@ -1,84 +1,205 @@
 .wrapper {
   display: grid;
-  grid-template: 1fr / 3fr 1fr 3fr 2.5fr 2.5fr;
-  justify-items: center;
+  grid-template: 1fr / 1fr 1.25fr;
   align-items: center;
-  border-radius: 10px;
-  border: 0.5px solid var(--Containers);
+  border-radius: 14px;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
   background: var(--Personal-colors-White);
-  padding: 10px;
-}
+  padding: 10px 15px 10px 15px;
 
-.info {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: start;
-  column-gap: 10px;
-  width: 100%;
-  height: 100%;
-  border-right: 0.5px solid var(--Containers);
-  // border-right: 0.5px solid var(--Containers);
-}
-
-.logo {
-  img {
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    border: 0.5px solid var(--Gradients-Gradient-1, #4772e6);
-  }
-}
-
-.title {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-
-  p {
-    color: var(--Personal-color-black);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  @media (max-width: 768px) {
+    grid-auto-flow: column;
+    padding: 10px;
   }
 
-  span {
-    color: var(--Subtitle-text, #666);
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+  @media (max-width: 576px) {
+    display: grid;
+    grid-template: none;
+    grid-auto-flow: row;
+    justify-items: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+    border: 0.5px solid rgba(0, 0, 0, 0.15);
+    background: var(--Personal-colors-White);
+    padding: 15px;
+    padding-bottom: 20px;
+    gap: 15px;
   }
-}
 
-.type {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  border-right: 0.5px solid var(--Containers);
-  svg {
-    width: 30px;
-    height: 30px;
+  .info {
+    display: grid;
+    grid-template: 1fr / auto 1fr auto;
+    align-items: center;
+    justify-content: stretch;
+    column-gap: 10px;
+    width: 100%;
+    height: 100%;
+
+    @media (max-width: 576px) {
+      justify-content: start;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+      padding-bottom: 15px;
+    }
+
+    .logo {
+      width: 40px;
+      height: 40px;
+      border-radius: 30px;
+      border: 0.5px solid var(--Gradients-Gradient-1, #4772e6);
+      overflow: hidden;
+
+      @media (max-width: 768px) {
+        width: 30px;
+        height: 30px;
+      }
+
+      > img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .title {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 5px;
+      padding-right: 10px;
+
+      @media (max-width: 576px) {
+        padding: 0px;
+      }
+
+      > p {
+        color: var(--Personal-color-black);
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      span {
+        color: var(--Subtitle-text, #666);
+        font-size: 12px;
+        font-weight: 500;
+      }
+    }
+
+    .icon {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      border-right: 0.5px solid var(--Containers);
+      border-left: 0.5px solid var(--Containers);
+      padding: 0px 20px;
+
+      @media (max-width: 992px) {
+        padding: 0px 15px;
+      }
+
+      @media (max-width: 768px) {
+        padding: 0px 10px;
+      }
+
+      @media (max-width: 576px) {
+        border: none;
+        padding: 0px;
+      }
+
+      > svg {
+        width: 30px;
+        height: 30px;
+
+        @media (max-width: 768px) {
+          width: 24px;
+          height: 24px;
+        }
+      }
+    }
   }
-}
 
-.data {
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 10px;
-  align-items: center;
-  cursor: pointer;
-  // justify-content: center;
+  .footer {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr auto;
+    justify-content: stretch;
+    height: 100%;
+    width: 100%;
 
-  p {
-    text-align: center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    color: var(--Personal-colors-main);
+    @media (max-width: 768px) {
+      grid-template: 1fr / 1fr 1fr auto;
+    }
+
+    @media (max-width: 576px) {
+      grid-template: none;
+      grid-auto-flow: row;
+      gap: 15px;
+      justify-content: stretch;
+      align-items: stretch;
+      justify-content: stretch;
+    }
+
+    .type {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      border-right: 0.5px solid var(--Containers);
+
+      @media (max-width: 576px) {
+        border: none;
+        justify-content: start;
+      }
+
+      > svg {
+        width: 30px;
+        height: 30px;
+
+        @media (max-width: 768px) {
+          width: 24px;
+          height: 24px;
+        }
+      }
+    }
+
+    .data {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 10px;
+      align-items: center;
+      cursor: pointer;
+      justify-content: start;
+      width: 100%;
+      padding-left: 15px;
+
+      &__see_post {
+        display: none;
+
+        @media (max-width: 576px) {
+          display: block;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+        }
+      }
+
+      @media (max-width: 768px) {
+        padding-left: 10px;
+      }
+
+      @media (max-width: 576px) {
+        padding: 0px;
+      }
+
+      svg {
+        width: 24px;
+      }
+    }
   }
 }
