--- a/src/features/createOrder/postComment/UI/styles.module.scss
+++ b/src/features/createOrder/postComment/UI/styles.module.scss
@@ -4,6 +4,10 @@
   background: var(--Personal-colors-White);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
 
+  @media (max-width: 576px) {
+    padding: 12px 15px;
+  }
+
   svg {
     justify-self: center;
     margin-top: 3px;
@@ -15,7 +19,6 @@
     resize: none;
     outline: none;
     color: var(--Personal-colors-black);
-    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
