--- a/src/features/createOrder/postFiles/UI/styles.module.scss
+++ b/src/features/createOrder/postFiles/UI/styles.module.scss
@@ -7,24 +7,65 @@
   box-shadow: 0px 0px 3px var(--Personal-colors-green-hover);
   background: #fff;
 
+  .icon {
+    width: 18px;
+
+    svg {
+      width: 100%;
+      height: auto;
+    }
+  }
+
   p {
     color: var(--Personal-colors-green-hover);
-    font-size: 18px;
+    font-size: var(--font-size-option-item-xl);
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+
+    @media (max-width: 992px) {
+      font-size: var(--font-size-option-item-md);
+    }
+
+    @media (max-width: 768px) {
+      font-size: var(--font-size-option-item-sm);
+    }
+
+    @media (max-width: 576px) {
+      font-size: var(--font-size-option-item-sm);
+      text-align: center;
+    }
   }
 }
 
 .modalContent {
   display: grid;
-  width: 35vw;
+  max-width: 800px;
+  width: 70vw;
   align-items: center;
   grid-auto-flow: row;
   row-gap: 25px;
   padding: 35px;
   border-radius: 25px;
-  overflow: hidden;
+
+  @media (max-width: 992px) {
+    width: 80vw;
+    row-gap: 20px;
+    border-radius: 20px;
+    padding: 25px;
+  }
+
+  @media (max-width: 768px) {
+    width: 90vw;
+    row-gap: 15px;
+    border-radius: 15px;
+    padding: 20px;
+  }
+
+  @media (max-width: 576px) {
+    width: 95vw;
+    border-radius: 12px;
+  }
 
   .top {
     display: grid;
@@ -37,6 +78,14 @@
       font-style: normal;
       font-weight: 400;
       color: var(--Personal-colors-main);
+
+      @media (max-width: 768px) {
+        font-size: 20px;
+      }
+
+      @media (max-width: 576px) {
+        font-size: 16px;
+      }
     }
 
     svg {
