--- a/src/features/createOrder/postGeneration/UI/styles.module.scss
+++ b/src/features/createOrder/postGeneration/UI/styles.module.scss
@@ -1,3 +1,12 @@
 .button {
-  border: 1px solid var(--Personal-colors-main);
+  box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, 0.15);
+
+  div {
+    width: 20px;
+
+    svg {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
