--- a/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
+++ b/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
@@ -98,14 +98,11 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
-  font-size: 9px;
+  font-size: 10px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: normal;
-  color: var(
-    --Gradient-1,
-    linear-gradient(45deg, #4772e6 23.91%, #8e54e9 75.06%)
-  );
+  color: var(--Personal-colors-main);
 }
 
 .button__sign {
