--- a/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
@@ -4,11 +4,24 @@
   row-gap: 20px;
   padding-bottom: 120px;
 
+  @media (max-width: 992px) {
+    padding-right: 0px;
+    align-items: center;
+  }
+
+  @media (max-width: 576px) {
+    padding-bottom: 20px;
+  }
+
   .content {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 10px;
+    row-gap: 20px;
     padding-top: 30px;
+
+    @media (max-width: 576px) {
+      gap: 30px;
+    }
 
     .top {
       display: grid;
@@ -17,12 +30,50 @@
       justify-content: space-between;
       padding-right: 110px;
 
+      @media (max-width: 992px) {
+        padding-right: 0px;
+        align-items: center;
+      }
+
+      @media (max-width: 768px) {
+        grid-auto-flow: row;
+        align-items: center;
+        justify-content: stretch;
+        gap: 10px;
+
+        button {
+          max-width: 40%;
+          justify-self: end;
+        }
+      }
+
+      @media (max-width: 576px) {
+        justify-content: center;
+        gap: 20px;
+
+        button {
+          max-width: 100%;
+        }
+      }
+
       .title {
         display: grid;
         grid-auto-flow: column;
         align-items: center;
         justify-content: start;
         column-gap: 30px;
+
+        @media (max-width: 768px) {
+          column-gap: 25px;
+        }
+
+        @media (max-width: 576px) {
+          grid-auto-flow: row;
+          align-items: center;
+          justify-content: center;
+          justify-items: center;
+          row-gap: 30px;
+        }
 
         span {
           display: grid;
@@ -36,14 +87,50 @@
           font-weight: bold;
           line-height: 1;
           color: var(--Personal-colors-main);
+
+          @media (max-width: 768px) {
+            width: 70px;
+            height: 70px;
+            border: 3px dashed #4772e6;
+            font-size: 38px;
+          }
+
+          @media (max-width: 576px) {
+            width: 80px;
+            height: 80px;
+            border: 4px dashed #4772e6;
+            font-size: 44px;
+          }
         }
 
         p {
-          color: var(--Personal-colors-black);
-          font-size: 34px;
           font-style: normal;
-          font-weight: 600;
+          font-weight: 500;
           line-height: normal;
+          color: var(--Personal-colors-main);
+          font-size: var(--font-size-title-secondary-xl);
+          background: var(--Gradients-Gradient-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          color: transparent;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+
+          @media (max-width: 992px) {
+            font-size: var(--font-size-title-secondary-md);
+          }
+
+          @media (max-width: 768px) {
+            font-size: var(--font-size-title-secondary-sm);
+          }
+
+          @media (max-width: 576px) {
+            font-size: var(--font-size-title-secondary-sm);
+            text-align: center;
+            white-space: wrap;
+          }
         }
       }
     }
@@ -53,17 +140,49 @@
       row-gap: 30px;
       padding: 0px 110px;
 
+      @media (max-width: 992px) {
+        padding: 0px;
+      }
+
+      @media (max-width: 576px) {
+        padding: 0;
+        row-gap: 20px;
+      }
+
       .data {
         display: grid;
         grid-template: 1fr / 1fr 1fr 1fr;
         justify-content: center;
         gap: 20px;
 
+        &.not_multi {
+          @media (min-width: 993px) {
+            grid-template: 1fr / 1.5fr 1fr;
+            gap: 50px;
+          }
+        }
+
+        @media (max-width: 992px) {
+          grid-template: 1fr / 2fr 1.5fr;
+        }
+
+        @media (max-width: 768px) {
+          grid-template: 1fr / 1fr 1fr;
+        }
+
+        @media (max-width: 576px) {
+          grid-template: auto auto auto / auto;
+          justify-content: stretch;
+        }
+
         .post_data {
           display: grid;
-          grid-template: 1fr 1fr / 1fr;
+          grid-template: minmax(100px, 240px) auto / 1fr;
           row-gap: 30px;
-          min-height: 500px;
+
+          @media (max-width: 768px) {
+            row-gap: 15px;
+          }
 
           button {
             height: fit-content;
@@ -80,21 +199,86 @@
             grid-template: 54px 54px 2fr / 1fr;
             row-gap: 25px;
 
+            @media (max-width: 768px) {
+              row-gap: 15px;
+            }
+
             &.filter {
               grid-template: 0.8fr 3.2fr / 1fr;
             }
           }
         }
 
+        .middle_block {
+          display: block;
+
+          @media (max-width: 992px) {
+            display: none;
+          }
+        }
+
         .display {
           position: relative;
-          min-height: 500px;
+          // min-height: 500px;
+
+          @media (max-width: 576px) {
+            display: none;
+          }
 
           .continue {
             position: absolute;
             bottom: -70px;
             right: 0;
             width: 100%;
+          }
+        }
+
+        .display_mobile {
+          display: none;
+
+          @media (max-width: 576px) {
+            display: block;
+          }
+
+          .see_post_btn {
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            border-radius: 14px;
+            text-align: center;
+            padding: 15px;
+            cursor: pointer;
+            box-shadow: 0px 2px 5px 1px rgba(71, 114, 230, 0.3);
+            background: #fff;
+
+            p {
+              background: var(--Gradients-Gradient-1);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+              /* Включаем поддержку для Firefox */
+              background-clip: text;
+              color: transparent;
+            }
+
+            .icon {
+              width: 20px;
+              height: 20px;
+
+              svg {
+                width: 100%;
+                height: auto;
+              }
+            }
+          }
+        }
+
+        .continue_mobile {
+          display: none;
+
+          @media (max-width: 576px) {
+            display: block;
           }
         }
       }
