--- a/src/widgets/createOrder/components/createOrderPost/tabs/platformFilter/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/tabs/platformFilter/UI/styles.module.scss
@@ -1,37 +1,82 @@
 .types {
   display: grid;
-  grid-template: 1fr / auto auto;
+  grid-template: 1fr / 1fr auto;
   column-gap: 10px;
   align-items: center;
 
-  p {
+  @media (max-width: 992px) {
+    grid-template: 1fr / 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+
+  @media (max-width: 576px) {
+    column-gap: 5px;
+  }
+
+  > p {
     white-space: nowrap;
     font-size: var(--font-size-subtitle-main-lg);
     font-weight: 500;
+
+    @media (max-width: 992px) {
+      display: none;
+    }
   }
 
   ul {
     display: grid;
     grid-template: 1fr / repeat(3, 1fr);
-    column-gap: 5%;
+    column-gap: 10px;
     align-items: center;
     justify-content: end;
     align-content: center;
-
-    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 0.75;
     color: var(--Personal-colors-main);
+    font-size: var(--font-size-subtitle-main-lg);
+
+    @media (max-width: 992px) {
+      font-size: var(--font-size-subtitle-main-md);
+    }
+
+    @media (max-width: 768px) {
+      font-size: var(--font-size-subtitle-main-sm);
+    }
+
+    @media (max-width: 576px) {
+      font-size: var(--font-size-subtitle-main-sm);
+    }
+
+    @media (max-width: 576px) {
+      font-size: var(--font-size-subtitle-main-xs);
+    }
 
     li {
-      border-radius: 10px;
+      border-radius: 14px;
       text-align: center;
       padding: 15px;
       cursor: pointer;
+      transition: all 500ms ease;
+
+      &:hover {
+        box-shadow: 0px 3px 10px 0px rgba(71, 114, 230, 0.6);
+        transition: all 500ms ease;
+      }
+
+      @media (max-width: 576px) {
+        padding: 10px;
+        border-radius: 10px;
+      }
 
       p {
         font-weight: 400;
+        line-height: normal;
+
+        @media (max-width: 576px) {
+          font-size: 12px;
+        }
       }
     }
   }
@@ -39,19 +84,23 @@
 
 .active {
   background: var(--Gradients-Gradient-1);
-  border: 1px solid #4772e6;
   color: #fff;
+  box-shadow: 0px 3px 5px 0px rgba(71, 114, 230, 0.6);
 }
 
 .non__active {
   position: relative;
-  border: 1px solid #4772e6;
-  background: var(--Gradients-Gradient-1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  /* Включаем поддержку для Firefox */
-  background-clip: text;
-  color: transparent;
+  box-shadow: 0px 2px 5px 1px rgba(71, 114, 230, 0.3);
+  background: #fff;
+
+  p {
+    background: var(--Gradients-Gradient-1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* Включаем поддержку для Firefox */
+    background-clip: text;
+    color: transparent;
+  }
 }
 
 .disabled {
