--- a/src/widgets/createOrder/components/createOrderPost/tabs/typeTabs/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/tabs/typeTabs/ui/styles.module.scss
@@ -1,32 +1,54 @@
 .post_type_filter {
   display: grid;
-  grid-template: 1fr / auto auto;
-  gap: 50px;
+  grid-template: 1fr / 1fr 1fr;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
+  border-radius: 16px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.3);
 
   li {
-    font-size: var(--row-gap-title-xl);
-    font-weight: 500;
+    font-size: var(--font-size-subtitle-main-xl);
+    font-weight: normal;
     cursor: pointer;
     position: relative;
+    width: 100%;
+    text-align: center;
+    color: var(--Personal-colors-grey);
+    padding: 10px 0px;
 
-    &.active__type {
-      background: var(--Gradients-Gradient-1);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      /* Включаем поддержку для Firefox */
-      background-clip: text;
-      color: transparent;
+    @media (max-width: 992px) {
+      font-size: var(--font-size-subtitle-main-md);
+    }
 
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 2.5px;
+    @media (max-width: 768px) {
+      font-size: var(--font-size-subtitle-main-sm);
+    }
+
+    @media (max-width: 576px) {
+      font-size: 14px;
+    }
+
+    @media (max-width: 375px) {
+      font-size: 12px;
+    }
+
+    &:first-child {
+      &.active__type {
         background: var(--Gradients-Gradient-1);
+        color: #fff;
+        box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, 0.5);
+        border-radius: 16px 0px 0px 16px;
+      }
+    }
+
+    &:last-child {
+      &.active__type {
+        background: var(--Gradients-Gradient-1);
+        color: #fff;
+        box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, 0.5);
+        border-radius: 0px 16px 16px 0px;
       }
     }
   }
