--- a/src/widgets/createOrder/components/createOrderTop/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderTop/UI/styles.module.scss
@@ -6,18 +6,59 @@
   padding-bottom: 80px;
   max-width: var(--container-width);
 
+  @media (max-width: 576px) {
+    padding-bottom: 50px;
+  }
+
   .top {
     display: grid;
     grid-auto-flow: column;
     column-gap: 25px;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: 576px) {
+      column-gap: 15px;
+    }
+
+    .icon {
+      width: 40px;
+
+      @media (max-width: 576px) {
+        width: 30px;
+      }
+
+      svg {
+        width: 100%;
+        height: auto;
+      }
+    }
+
     p {
       color: var(--Personal-colors-White);
-      font-size: 44px;
+      font-size: var(--font-size-title-main-xl);
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      @media (max-width: 992px) {
+        font-size: var(--font-size-title-main-lg);
+      }
+
+      @media (max-width: 768px) {
+        font-size: var(--font-size-title-main-md);
+      }
+
+      @media (max-width: 576px) {
+        font-size: var(--font-size-title-main-sm);
+      }
+
+      @media (max-width: 375px) {
+        font-size: var(--font-size-title-main-xs);
+      }
     }
   }
 
@@ -26,12 +67,32 @@
     grid-auto-flow: row;
     align-items: center;
 
+    @media (max-width: 768px) {
+      gap: 10px;
+    }
+
+    @media (max-width: 576px) {
+      gap: 30px;
+    }
+
     .title {
       display: grid;
       grid-auto-flow: column;
       align-items: center;
       justify-content: start;
       column-gap: 30px;
+
+      @media (max-width: 768px) {
+        column-gap: 25px;
+      }
+
+      @media (max-width: 576px) {
+        grid-auto-flow: row;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+        row-gap: 30px;
+      }
 
       span {
         display: grid;
@@ -45,14 +106,49 @@
         font-weight: bold;
         line-height: 1;
         color: var(--Personal-colors-White);
+
+        @media (max-width: 768px) {
+          width: 70px;
+          height: 70px;
+          border: 3px dashed #fff;
+          font-size: 38px;
+        }
+
+        @media (max-width: 576px) {
+          width: 80px;
+          height: 80px;
+          border: 4px dashed #fff;
+          font-size: 44px;
+        }
       }
 
       p {
         color: var(--Personal-colors-White);
-        font-size: 34px;
+        font-size: var(--font-size-title-secondary-xl);
         font-style: normal;
-        font-weight: 600;
+        font-weight: 500;
         line-height: normal;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        @media (max-width: 992px) {
+          font-size: var(--font-size-title-secondary-lg);
+        }
+
+        @media (max-width: 768px) {
+          font-size: var(--font-size-title-secondary-md);
+        }
+
+        @media (max-width: 576px) {
+          font-size: var(--font-size-title-secondary-sm);
+          text-align: center;
+          white-space: wrap;
+        }
+
+        @media (max-width: 375px) {
+          font-size: var(--font-size-title-secondary-xs);
+        }
       }
     }
 
@@ -69,6 +165,17 @@
       box-shadow: inset 0px 0px 0px 1px #fff;
       background: rgba(255, 255, 255, 0);
 
+      @media (max-width: 768px) {
+        margin-left: 95px;
+        max-width: 60%;
+        grid-template: 1fr / 1fr 50px;
+      }
+
+      @media (max-width: 576px) {
+        margin-left: 0;
+        max-width: 100%;
+      }
+
       button {
         border-radius: 50%;
         background: var(--Personal-colors-White);
@@ -77,7 +184,13 @@
         align-items: center;
         width: 60px;
         height: 60px;
+
+        @media (max-width: 768px) {
+          width: 50px;
+          height: 50px;
+        }
       }
+
       .input {
         display: grid;
         grid-template: 1fr / 20px 1fr;
@@ -88,6 +201,7 @@
         input {
           color: var(--Personal-colors-White);
           align-items: center;
+
           &::placeholder {
             color: var(--Personal-colors-White);
           }
