--- a/src/entities/platform/ui/displays/displayInstagram/feed/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayInstagram/feed/styles.module.scss
@@ -2,11 +2,14 @@
   .screen {
     position: relative;
     overflow: hidden;
+    width: 100%;
+    font-size: 100%;
+    margin: 2%;
 
     .time {
       position: absolute;
-      top: 27px;
-      left: 60px;
+      top: 3.5%;
+      left: 15%;
       z-index: 1;
       font-weight: 500;
       color: #fff;
@@ -15,15 +18,15 @@
 
     .statusbar {
       position: absolute;
-      top: 30px;
-      right: 43px;
+      top: 4%;
+      right: 10%;
       z-index: 1;
       width: 20%;
     }
 
     .dynamic {
       position: absolute;
-      top: 20px;
+      top: 2.5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -32,7 +35,7 @@
 
     .header {
       position: absolute;
-      top: 60px;
+      top: 8%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -80,7 +83,7 @@
     .footer {
       width: 90%;
       position: absolute;
-      bottom: 35px;
+      bottom: 5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -91,6 +94,16 @@
       justify-items: center;
       gap: 5px;
       color: #fff;
+
+      div {
+        width: 20px;
+        height: 20px;
+
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
 
     .mockup {
@@ -98,15 +111,15 @@
 
     .display {
       position: absolute;
-      top: 0;
-      left: 0;
-      height: 97.5%;
-      width: 93.7%;
+      top: 50%;
+      left: 50%;
+      height: 97.6%;
+      transform: translate(-50%, -50%);
+      width: 94%;
       padding-top: 80px;
       padding-bottom: 60px;
-      background: #202020;
-      margin: 7.5px 11px;
-      border-radius: 40px;
+      background: #000000;
+      border-radius: 54px;
 
       .content {
         height: 100%;
@@ -131,7 +144,7 @@
             .account {
               display: grid;
               align-items: center;
-              grid-template: 1fr / 30px 1fr;
+              grid-template: 1fr / auto 1fr;
               gap: 5px;
 
               &__avatar {
@@ -201,7 +214,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 10px;
-            padding: 10px;
+            padding: 3%;
             padding-bottom: 0px;
 
             .left {
@@ -213,7 +226,7 @@
           }
 
           &__likes {
-            padding: 10px 10px 5px 10px;
+            padding: 3% 3% 1.5% 3%;
             font-weight: 500;
             color: #fff;
             font-size: 14px;
@@ -223,14 +236,14 @@
             height: 100%;
             width: 100%;
             font-size: 12px;
-            padding: 0px 10px;
+            padding: 0px 3%;
             color: #fff;
           }
 
           .info {
             position: absolute;
-            bottom: 4px;
-            right: 7px;
+            bottom: 3%;
+            right: 5%;
             display: grid;
             grid-auto-flow: column;
             gap: 5px;
@@ -243,7 +256,7 @@
           .post__info {
             color: rgba(255, 255, 255, 0.5);
             display: grid;
-            padding: 5px 10px;
+            padding: 1.5% 3%;
 
             .show__comments {
               font-size: 12px;
