--- a/src/entities/platform/ui/displays/displayInstagram/stories/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayInstagram/stories/styles.module.scss
@@ -2,11 +2,14 @@
   .screen {
     position: relative;
     overflow: hidden;
+    width: 100%;
+    font-size: 100%;
+    margin: 2%;
 
     .time {
       position: absolute;
-      top: 22px;
-      left: 56px;
+      top: 3.5%;
+      left: 15%;
       z-index: 1;
       font-weight: 500;
       color: #fff;
@@ -15,15 +18,15 @@
 
     .statusbar {
       position: absolute;
-      top: 26px;
-      right: 36px;
+      top: 4%;
+      right: 10%;
       z-index: 1;
       width: 20%;
     }
 
     .dynamic {
       position: absolute;
-      top: 18px;
+      top: 2.5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -33,7 +36,7 @@
     .footer {
       width: 86%;
       position: absolute;
-      bottom: 44px;
+      bottom: 5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -46,7 +49,7 @@
       color: #fff;
 
       &__send_msg {
-        padding: 7px 10px;
+        padding: 3.5% 5.5%;
         border-radius: 15px;
         border: 1px solid rgba(255, 255, 255, 1);
         font-size: 10px;
@@ -65,15 +68,15 @@
 
     .display {
       position: absolute;
-      top: 0;
-      left: 0;
-      height: 97.5%;
-      width: 93.7%;
+      top: 50%;
+      left: 50%;
+      height: 97.6%;
+      transform: translate(-50%, -50%);
+      width: 94%;
       padding-top: 50px;
       padding-bottom: 80px;
       background: #000000;
-      margin: 7.5px 11px;
-      border-radius: 40px;
+      border-radius: 54px;
 
       .content {
         height: 100%;
@@ -90,8 +93,8 @@
           .head {
             position: absolute;
             z-index: 1;
-            left: 2px;
-            top: 10px;
+            left: 1%;
+            top: 1.5%;
             color: #fff;
             display: grid;
             grid-auto-flow: column;
@@ -101,7 +104,7 @@
             .account {
               display: grid;
               align-items: center;
-              grid-template: 1fr / 20px 1fr;
+              grid-template: 1fr / auto 1fr;
               gap: 5px;
 
               &__avatar {
@@ -122,8 +125,7 @@
           }
 
           .empty__photo {
-            height: 34vw;
-            max-height: 500px;
+            height: 600px;
             background: rgba(255, 255, 255, 0.1);
             display: flex;
             flex-direction: column;
@@ -147,8 +149,8 @@
             height: 100%;
             width: 100%;
             font-size: 12px;
-            padding: 0px 10px;
-            padding-top: 5px;
+            padding: 0px 3%;
+            padding-top: 1.5%;
             color: #fff;
           }
         }
