--- a/src/entities/platform/ui/displays/displayTelegram/UI/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayTelegram/UI/styles.module.scss
@@ -2,11 +2,14 @@
   .screen {
     position: relative;
     overflow: hidden;
+    width: 100%;
+    font-size: 100%;
+    margin: 2%;
 
     .time {
       position: absolute;
-      top: 27px;
-      left: 60px;
+      top: 3.5%;
+      left: 15%;
       z-index: 1;
       font-weight: 500;
       color: #fff;
@@ -15,15 +18,15 @@
 
     .statusbar {
       position: absolute;
-      top: 30px;
-      right: 43px;
+      top: 4%;
+      right: 10%;
       z-index: 1;
       width: 20%;
     }
 
     .dynamic {
       position: absolute;
-      top: 20px;
+      top: 2.5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -32,8 +35,8 @@
 
     .back {
       position: absolute;
-      top: 60px;
-      left: 20px;
+      top: 8%;
+      left: 5%;
       z-index: 1;
       width: 15%;
     }
@@ -42,7 +45,7 @@
       display: grid;
       justify-items: center;
       position: absolute;
-      top: 56px;
+      top: 7.5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -62,8 +65,8 @@
 
     .avatar {
       position: absolute;
-      top: 55px;
-      right: 20px;
+      top: 7.5%;
+      right: 5%;
       z-index: 1;
       width: 30px;
       height: 30px;
@@ -73,7 +76,7 @@
 
     .unmute {
       position: absolute;
-      bottom: 40px;
+      bottom: 5%;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
@@ -87,15 +90,15 @@
 
     .display {
       position: absolute;
-      top: 0;
-      left: 0;
-      height: 97.5%;
-      width: 93.7%;
+      top: 50%;
+      left: 50%;
+      height: 97.6%;
+      transform: translate(-50%, -50%);
+      width: 94%;
       padding-top: 80px;
       padding-bottom: 60px;
       background: #142530;
-      margin: 7.5px 11px;
-      border-radius: 40px;
+      border-radius: 54px;
 
       .content {
         height: 100%;
