--- a/src/features/createOrder/postButtons/UI/styles.module.scss
+++ b/src/features/createOrder/postButtons/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .open {
   border-radius: 12px;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.15);
   background: #fff;
 
   .icon {
