--- a/src/features/createOrder/postComment/UI/styles.module.scss
+++ b/src/features/createOrder/postComment/UI/styles.module.scss
@@ -2,7 +2,7 @@
   padding: 20px;
   border-radius: 15px;
   background: var(--Personal-colors-White);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.15);
 
   @media (max-width: 576px) {
     padding: 12px 15px;
