--- a/src/features/createOrder/postEditor/ui/styles.module.scss
+++ b/src/features/createOrder/postEditor/ui/styles.module.scss
@@ -1,6 +1,6 @@
 .editor {
   background: #fff;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.15);
   border-radius: 15px;
   overflow: hidden;
   height: 100%;
@@ -16,6 +16,9 @@
   z-index: 1;
 
   svg {
+    width: 20px;
+    height: 20px;
+
     @media (max-width: 576px) {
       width: 18px;
       height: 18px;
