--- a/src/features/wallet/legalForm/UI/styles.module.scss
+++ b/src/features/wallet/legalForm/UI/styles.module.scss
@@ -91,9 +91,9 @@
       font-size: 16px;
     }
 
-    @media (max-width: 576px) {
-      font-size: 12px;
-    }
+    // @media (max-width: 576px) {
+    //   font-size: 12px;
+    // }
 
     &::placeholder {
       color: rgba(0, 0, 0, 0.3);
