--- a/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
@@ -70,6 +70,7 @@
           font-style: normal;
           font-weight: 500;
           line-height: 1;
+          text-align: center;
         }
 
         a,
