--- a/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
@@ -1,27 +1,64 @@
 .guide {
   padding: 30px;
   border-radius: 20px;
-  border: 2px dashed var(--Personal-colors-main);
+  // border: 2px dashed var(--Personal-colors-main);
   background: var(--Personal-colors-White);
   box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
   @media (max-width: 992px) {
     padding: 15px;
     border-radius: 15px;
   }
+}
 
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+.text {
+  color: var(--Personal-colors-black);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 
-    @media (max-width: 992px) {
-      font-size: 12px;
+  @media (max-width: 992px) {
+    font-size: 12px;
+  }
+
+  @media (max-width: 576px) {
+    font-size: 10px;
+  }
+}
+
+.accordion {
+  .item {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 10px;
+
+    .trigger {
+      display: grid;
+      grid-auto-flow: column;
+      column-gap: 10px;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      padding: 15px;
+      cursor: pointer;
+      border-radius: 12px;
+      transition: all 300ms ease;
+      box-shadow: 0px 3px 5px 0px rgba(71, 114, 230, 0.6);
+      background: var(--Gradients-Gradient-1);
+
+      .title {
+        color: var(--Personal-colors-White);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        width: 100%;
+      }
     }
 
-    @media (max-width: 576px) {
-      font-size: 10px;
+    .content {
+      padding: 10px;
+      margin: 10px;
     }
   }
 }
