fix: little fixs whole project, change requests in Catalog/Cart Pages (add manager logic)

--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -186,6 +186,8 @@
         grid-auto-flow: column;
         column-gap: 10px;
         justify-content: flex-start;
+        align-items: center;
+        align-content: center;
       }
     }
   }
