--- a/src/features/project/technicalSpecification/UI/styles.module.scss
+++ b/src/features/project/technicalSpecification/UI/styles.module.scss
@@ -167,6 +167,7 @@
             grid-auto-flow: column;
             align-items: center;
             justify-content: space-between;
+            column-gap: 20px;
 
             a {
               color: var(--Personal-colors-main);
