--- a/src/features/project/zeroManagerProject/UI/styles.module.scss
+++ b/src/features/project/zeroManagerProject/UI/styles.module.scss
@@ -1,35 +1,62 @@
-.no__project {
+.wrapper {
   display: grid;
-  grid-auto-flow: row;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 170px;
-}
+  align-items: flex-start;
 
-.smile {
-  display: grid;
-  grid-auto-flow: row;
-  justify-content: center;
-  align-items: center;
-  row-gap: 30px;
-  text-align: center;
-
-  div {
+  .no__project {
     display: grid;
     grid-auto-flow: row;
     justify-content: center;
-  }
+    align-items: center;
+    margin-bottom: 170px;
 
-  p {
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    max-width: 510px;
-  }
+    .smile {
+      display: grid;
+      grid-auto-flow: row;
+      justify-content: center;
+      align-items: center;
+      row-gap: 30px;
+      text-align: center;
 
-  svg {
-    width: 185px;
-    height: 185px;
+      div {
+        display: grid;
+        grid-auto-flow: row;
+        justify-content: center;
+      }
+
+      p {
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        max-width: 510px;
+      }
+
+      svg {
+        width: 185px;
+        height: 185px;
+      }
+
+      @media (max-width: 992px) {
+        svg {
+          width: 160px;
+          height: 160px;
+        }
+
+        p {
+          font-size: 20px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        svg {
+          width: 120px;
+          height: 120px;
+        }
+
+        p {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
