--- a/src/features/createOrder/postFiles/UI/styles.module.scss
+++ b/src/features/createOrder/postFiles/UI/styles.module.scss
@@ -40,8 +40,7 @@
 
 .modalContent {
   display: grid;
-  max-width: 800px;
-  width: 70vw;
+  width: 100%;
   align-items: center;
   grid-auto-flow: row;
   row-gap: 25px;
@@ -49,21 +48,18 @@
   border-radius: 25px;
 
   @media (max-width: 992px) {
-    width: 80vw;
     row-gap: 20px;
     border-radius: 20px;
     padding: 25px;
   }
 
   @media (max-width: 768px) {
-    width: 90vw;
     row-gap: 15px;
     border-radius: 15px;
     padding: 20px;
   }
 
   @media (max-width: 576px) {
-    width: 95vw;
     border-radius: 12px;
     padding: 15px;
   }
