--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -56,85 +56,106 @@
       padding: 10px;
     }
   }
-}
 
-.wrapper {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  padding: 0 25px;
-}
-
-.options {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 30px;
-  // padding: 30px 0;
-  padding-bottom: 30px;
-  border-radius: 20px;
-}
-
-.item {
-  display: grid;
-  grid-auto-flow: row;
-
-  .trigger {
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    padding: 15px;
-    cursor: pointer;
-    border-radius: 12px;
-    transition: all 300ms ease;
-
-    .title {
-      display: grid;
-      grid-auto-flow: column;
-      column-gap: 10px;
-      align-items: center;
-      justify-content: start;
-
-      p {
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        color: var(--Personal-colors-main);
-      }
-      svg {
-        width: 26px;
-        height: 26px;
-      }
-    }
-  }
-
-  .content {
+  .wrapper {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 20px;
-    padding: 10px;
-  }
-}
+    row-gap: 30px;
+    padding: 0 25px;
 
-.arrow {
-  display: grid;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  border-radius: 50%;
-  background: var(--Personal-colors-White, #fff);
-  box-shadow:
-    0px -2px 16px 0px rgba(0, 0, 0, 0.08),
-    0px 6px 14px 0px rgba(0, 0, 0, 0.08);
-  width: 40px;
-  height: 40px;
-}
+    .options {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 30px;
+      // padding: 30px 0;
+      padding-bottom: 30px;
+      border-radius: 20px;
 
-.active {
-  .arrow {
-    background: var(--Gradients-Gradient-1) !important;
+      .accordion {
+        background: var(--Personal-colors-White);
+        box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
+        border-radius: 20px;
+
+        .item {
+          display: grid;
+          grid-auto-flow: row;
+
+          .trigger {
+            display: grid;
+            grid-auto-flow: column;
+            column-gap: 10px;
+            justify-content: space-between;
+            align-items: center;
+            align-content: center;
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 12px;
+            transition: all 300ms ease;
+
+            &__lottie {
+              width: 40px;
+              height: 40px;
+
+              img {
+                width: 100%;
+                height: 100%;
+              }
+            }
+
+            .title {
+              display: grid;
+              grid-auto-flow: column;
+              column-gap: 10px;
+              align-items: center;
+              justify-content: start;
+
+              p {
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: normal;
+                color: var(--Personal-colors-main);
+              }
+
+              svg {
+                width: 26px;
+                height: 26px;
+
+                @media (max-width: 576px) {
+                  display: none;
+                }
+              }
+            }
+          }
+
+          .content {
+            display: grid;
+            grid-auto-flow: row;
+            row-gap: 20px;
+            padding: 5px 15px 15px 15px;
+          }
+        }
+
+        .arrow {
+          display: grid;
+          align-items: center;
+          align-content: center;
+          justify-content: center;
+          border-radius: 50%;
+          background: var(--Personal-colors-White, #fff);
+          box-shadow:
+            0px -2px 16px 0px rgba(0, 0, 0, 0.08),
+            0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+          width: 40px;
+          height: 40px;
+        }
+
+        .active {
+          .arrow {
+            background: var(--Gradients-Gradient-1) !important;
+          }
+        }
+      }
+    }
   }
 }
