--- a/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
@@ -54,68 +54,80 @@
   }
 }
 
-.item {
-  display: grid;
-  grid-auto-flow: row;
+.accordion {
+  background: var(--Personal-colors-White);
+  box-shadow: 0px 1px 4px 1px var(--Personal-colors-main);
+  border-radius: 20px;
 
-  .trigger {
+  .item {
     display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    padding: 15px;
-    cursor: pointer;
-    border-radius: 12px;
-    transition: all 300ms ease;
+    grid-auto-flow: row;
 
-    .title {
+    .trigger {
       display: grid;
       grid-auto-flow: column;
       column-gap: 10px;
+      justify-content: space-between;
       align-items: center;
-      justify-content: start;
+      align-content: center;
+      padding: 15px;
+      cursor: pointer;
+      border-radius: 12px;
+      transition: all 300ms ease;
 
-      p {
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        color: var(--Personal-colors-main);
-        white-space: nowrap;
+      .title {
+        display: grid;
+        grid-auto-flow: column;
+        column-gap: 10px;
+        align-items: center;
+        justify-content: start;
+
+        .trigger__lottie {
+          width: 30px;
+          height: 30px;
+
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        p {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;
+          color: var(--Personal-colors-main);
+          white-space: nowrap;
+        }
       }
-      svg {
-        width: 26px;
-        height: 26px;
-      }
+    }
+
+    .content {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 20px;
+      padding: 15px;
     }
   }
 
-  .content {
-    display: grid;
-    grid-auto-flow: row;
-    row-gap: 20px;
-    padding: 10px;
-  }
-}
-
-.arrow {
-  display: grid;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  border-radius: 50%;
-  background: var(--Personal-colors-White, #fff);
-  box-shadow:
-    0px -2px 16px 0px rgba(0, 0, 0, 0.08),
-    0px 6px 14px 0px rgba(0, 0, 0, 0.08);
-  width: 30px;
-  height: 30px;
-}
-
-.active {
   .arrow {
-    background: var(--Gradients-Gradient-1) !important;
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: var(--Personal-colors-White, #fff);
+    box-shadow:
+      0px -2px 16px 0px rgba(0, 0, 0, 0.08),
+      0px 6px 14px 0px rgba(0, 0, 0, 0.08);
+    width: 30px;
+    height: 30px;
+  }
+
+  .active {
+    .arrow {
+      background: var(--Gradients-Gradient-1) !important;
+    }
   }
 }
