--- a/src/widgets/createOrder/components/createOrderLoading/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderLoading/ui/styles.module.scss
@@ -1,7 +1,7 @@
 .loading {
   position: fixed;
   width: 100vw;
-  height: 100svh;
+  height: 96dvh;
   z-index: 50;
   backdrop-filter: blur(50px);
   display: flex;
@@ -11,12 +11,16 @@
   transition: all 0.5s ease;
 
   &__icon {
-    width: 5vw;
+    width: 100px;
+
+    @media (max-width: 576px) {
+      width: 60px;
+    }
   }
 
   &__title {
     margin-top: 10px;
-    font-size: var(--column-gap-option-item-xl);
+    font-size: 20px;
     font-weight: 500;
     color: var(--Personal-colors-main);
     padding-bottom: 10px;
@@ -25,5 +29,9 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     color: transparent;
+
+    @media (max-width: 576px) {
+      font-size: 14px;
+    }
   }
 }
