--- a/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
@@ -80,7 +80,7 @@
 
       @media (max-width: 768px) {
         gap: 10px;
-        max-height: 12dvh;
+        max-height: 30vw;
         overflow: auto;
         padding: 5px;
       }
@@ -98,15 +98,14 @@
         cursor: pointer;
 
         &:hover {
-          background: var(--Gradients-Gradient-1);
-          color: #fff;
+          box-shadow: 0px 1px 5px 2px rgba(71, 114, 230, 0.3);
           transition: all 500ms ease;
         }
 
         &.active {
           background: var(--Gradients-Gradient-1);
           color: #fff;
-          box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
         }
 
         @media (max-width: 992px) {
