--- a/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/guide/UI/styles.module.scss
@@ -42,10 +42,15 @@
       justify-content: space-between;
       align-items: center;
       align-content: center;
-      padding: 15px;
+      padding: 10px;
       cursor: pointer;
       border-radius: 12px;
       transition: all 300ms ease;
+
+      img {
+        width: 40px;
+        height: 40px;
+      }
 
       .title {
         font-size: 12px;
@@ -53,6 +58,12 @@
         font-weight: 600;
         line-height: normal;
         width: 100%;
+
+        background: var(--Gradients-Gradient-1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        color: transparent;
       }
     }
 
