--- a/src/features/createOrder/addMediaFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addMediaFiles/UI/styles.module.scss
@@ -4,6 +4,7 @@
   column-gap: 20px;
   width: 100%;
   max-height: 70dvh;
+  overflow: hidden;
 
   @media (max-width: 768px) {
     display: flex;
@@ -125,11 +126,11 @@
           font-size: 13px;
           font-style: normal;
           font-weight: 500;
-          line-height: 0.75;
         }
       }
 
       .button {
+        max-width: 60vw;
         display: grid;
         grid-auto-flow: row;
         justify-content: center;
@@ -143,7 +144,6 @@
           font-size: 14px;
           font-style: normal;
           font-weight: 500;
-          line-height: 0.75;
         }
 
         input {
@@ -158,6 +158,8 @@
   }
 
   .right {
+    overflow: auto;
+
     &.scroll {
       overflow-y: scroll;
 
@@ -210,7 +212,6 @@
               font-size: 10px;
               font-style: normal;
               font-weight: 600;
-              line-height: 0.75;
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
@@ -221,7 +222,6 @@
               font-size: 8px;
               font-style: normal;
               font-weight: 600;
-              line-height: 0.75;
             }
           }
         }
