--- a/src/entities/project/ui/subcard/UI/styles.module.scss
+++ b/src/entities/project/ui/subcard/UI/styles.module.scss
@@ -303,6 +303,17 @@
       padding: 0 20px;
       height: 100%;
 
+      a,
+      button {
+        height: 100%;
+        p {
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 1;
+        }
+      }
+
       p {
         font-size: 16px;
         font-style: normal;
@@ -369,9 +380,10 @@
         display: grid;
         grid-auto-flow: row;
         row-gap: 15px;
+
         div {
           display: grid;
-          grid-auto-flow: row;
+          grid-template: repeat(2, 1fr) / 1fr;
           row-gap: 5px;
         }
       }
