--- a/src/shared/ui/countdownTimer/UI/styles.module.scss
+++ b/src/shared/ui/countdownTimer/UI/styles.module.scss
@@ -1,7 +1,11 @@
 .wrapper {
   display: grid;
   align-items: center;
-  p {
+  span {
     color: var(--Orange);
+
+    &.isTimeout {
+      color: var(--Text-sample);
+    }
   }
 }
