--- a/src/widgets/channel/addChannel/UI/channelIdentification/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelIdentification/UI/styles.module.scss
@@ -87,7 +87,7 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 0.75;
+          line-height: 1;
 
           &::placeholder {
             color: var(--Text-sample);
@@ -122,7 +122,7 @@
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
-        // line-height: 0.75;
+        // line-height: 1
         background: var(--Personal-colors-grey);
         border: none;
       }
