--- a/src/widgets/offer/myOffers/card/UI/styles.module.scss
+++ b/src/widgets/offer/myOffers/card/UI/styles.module.scss
@@ -29,6 +29,16 @@
     }
   }
 
+  .platform__icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    svg {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
   &__description {
     display: grid;
     grid-auto-flow: row;
@@ -58,8 +68,8 @@
         justify-content: start;
 
         img {
-          width: 30px;
-          height: 30px;
+          width: 50px;
+          height: 50px;
           border-radius: 50%;
           border: 0.5px solid var(--Personal-colors-main);
         }
@@ -73,14 +83,14 @@
             font-size: 16px;
             font-style: normal;
             font-weight: 600;
-            line-height: 0.75;
+            line-height: 1;
           }
           span {
             color: rgba(0, 0, 0, 0.6);
             font-size: 12px;
             font-style: normal;
             font-weight: 500;
-            line-height: 0.75;
+            line-height: 1;
           }
         }
       }
@@ -95,7 +105,7 @@
           font-size: 12px;
           font-style: normal;
           font-weight: 500;
-          line-height: 0.75;
+          line-height: 1;
         }
       }
     }
@@ -201,12 +211,11 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 600;
-        line-height: 0.75;
+        line-height: 1;
       }
 
       .tarif {
         span {
-          color: var(--Orange);
           font-size: 20px;
           font-style: normal;
           font-weight: 500;
@@ -240,7 +249,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 600;
-        line-height: 0.75;
+        line-height: 1;
       }
 
       span {
@@ -456,7 +465,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
-        line-height: 0.75;
+        line-height: 1;
       }
 
       svg {
