--- a/src/features/offer/acceptOffer/UI/styles.module.scss
+++ b/src/features/offer/acceptOffer/UI/styles.module.scss
@@ -18,78 +18,79 @@
 }
 
 .popover {
-  border-radius: 10px;
-  padding: 15px;
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
   height: 100%;
-  background: var(--Gradients-Gradient-1);
-  max-width: 300px;
+  width: 100%;
+  position: relative;
+}
 
-  .description__title {
-    font-size: 16px;
-    color: #fff;
-    text-align: center;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
+.drawer_popover {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+}
 
-  .dates {
-    display: grid;
-    grid-auto-flow: row;
-    gap: 5px;
+.description__title {
+  font-size: 16px;
+  color: #2d2d2d;
+  text-align: center;
+  font-weight: 600;
+}
 
-    .date {
-      font-size: 14px;
-      padding: 5px 10px;
-      border-radius: 12px;
-      color: var(--Personal-colors-main);
-      background: #fff;
-      font-weight: 500;
-      text-align: center;
-      margin: 0 5%;
-      cursor: pointer;
-      transition: all 0.5s ease;
+.dates {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 10px;
+  max-height: 50dvh;
+  overflow: auto;
+  padding: 10px;
 
-      &:hover {
-        background: var(--Gradients-Gradient-1);
-        box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
-        color: #fff;
-      }
-
-      &.selected_date {
-        background: var(--Gradients-Gradient-1);
-        box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
-        color: #fff;
-      }
-    }
-  }
-
-  .send {
-    padding: 5px 10px;
-    margin-top: 20px;
-    border-radius: 12px;
-    transition: all 0.5s ease;
+  .date {
+    font-size: 14px;
+    padding: 10px;
+    border-radius: 16px;
+    color: #2d2d2d;
     background: #fff;
-    color: var(--Personal-colors-main);
+    font-weight: 500;
+    text-align: center;
     cursor: pointer;
-
-    &__title {
-      font-size: 14px;
-      text-align: center;
-      text-transform: uppercase;
-      font-weight: 600;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      svg {
-        margin-left: 5px;
-      }
-    }
+    transition: all 0.5s ease;
+    box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.2);
 
     &:hover {
+      box-shadow: 1px 1px 5px 1px rgba(71, 114, 230, 0.7);
+      color: var(--Personal-colors-main);
+    }
+
+    &.selected_date {
+      box-shadow: 1px 1px 5px 1px rgba(71, 114, 230, 0.7);
       color: #fff;
       background: var(--Gradients-Gradient-1);
-      box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
+    }
+  }
+}
+
+.send {
+  button {
+    border-radius: 30px;
+  }
+
+  &__title {
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+      margin-left: 5px;
     }
   }
 }
