--- a/src/features/offer/sendLink/UI/styles.module.scss
+++ b/src/features/offer/sendLink/UI/styles.module.scss
@@ -22,61 +22,97 @@
 }
 
 .popover {
-  border-radius: 10px;
-  padding: 15px;
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
   height: 100%;
-  background: var(--Gradients-Gradient-1);
+  width: 100%;
+  position: relative;
+}
 
-  .link {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 5px;
+.drawer_popover {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+}
 
-    &__input {
-      column-span: 2;
-      border-radius: 5px;
-      padding: 8px;
-      box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
-      width: 100%;
-      font-size: 14px;
-      min-width: 220px;
-      color: #fff;
+.description {
+  color: #2d2d2d;
+  margin-bottom: 30px;
 
-      &::placeholder {
-        color: #fff;
-      }
-    }
-
-    &__input_invalid {
-      box-shadow: 0 0 4px red;
-      color: red;
-      background: #fff;
-    }
-
-    &__send_icon {
-      cursor: pointer;
-      color: var(--Personal-colors-main);
-      background: #fff;
-      border-radius: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50px;
-      transition: all 0.5s ease;
-
-      &:hover {
-        color: #fff;
-        background: var(--Gradients-Gradient-1);
-        box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
-      }
-    }
-  }
-
-  .error_input {
-    color: #fff;
-    font-weight: 500;
-    font-size: 14px;
-    margin-bottom: 10px;
+  &__title {
+    font-size: 12px;
     text-align: center;
+    font-weight: 600;
+    margin-bottom: 10px;
   }
+
+  &__subtitle {
+    font-size: 10px;
+    font-weight: 400;
+  }
+}
+
+.link {
+  display: grid;
+  grid-template: 1fr / 1fr auto;
+  gap: 5px;
+  padding: 0px 10px;
+
+  &__input {
+    column-span: 2;
+    border-radius: 5px;
+    padding: 8px;
+    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    width: 100%;
+    font-size: 16px;
+    color: #2d2d2d;
+
+    &::placeholder {
+      color: #2d2d2d;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__input_invalid {
+    box-shadow: 0 0 4px red;
+    color: red;
+    background: #fff;
+  }
+
+  &__send_icon {
+    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    cursor: pointer;
+    color: var(--Personal-colors-main);
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    transition: all 0.5s ease;
+
+    &:hover {
+      color: #fff;
+      background: var(--Gradients-Gradient-1);
+      box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
+
+      svg {
+        stroke: #fff;
+      }
+    }
+  }
+}
+
+.error_input {
+  color: red;
+  font-weight: 500;
+  font-size: 10px;
+  text-align: center;
 }
