--- a/src/features/order/rejectPost/UI/styles.module.scss
+++ b/src/features/order/rejectPost/UI/styles.module.scss
@@ -20,66 +20,82 @@
 }
 
 .popover {
-  border-radius: 10px;
-  padding: 15px;
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
   height: 100%;
-  background: var(--Gradients-Gradient-1);
-  max-width: 300px;
+  width: 100%;
+  position: relative;
+}
 
-  .description {
-    color: #fff;
-    margin-bottom: 30px;
+.drawer_popover {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+}
 
-    &__title {
-      font-size: 12px;
-      text-align: center;
-      font-weight: 600;
-      margin-bottom: 10px;
+.description {
+  color: #2d2d2d;
+  margin-bottom: 30px;
+
+  &__title {
+    font-size: 12px;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  &__subtitle {
+    font-size: 10px;
+    font-weight: 400;
+  }
+}
+
+.comment {
+  display: grid;
+  grid-template: 1fr / 1fr auto;
+  gap: 5px;
+
+  &__input {
+    column-span: 2;
+    border-radius: 5px;
+    padding: 8px;
+    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    width: 100%;
+    font-size: 16px;
+    color: #2d2d2d;
+
+    &::placeholder {
+      color: #2d2d2d;
     }
-    &__subtitle {
-      font-size: 10px;
-      font-weight: 400;
+
+    &:focus {
+      outline: none;
     }
   }
 
-  .comment {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 5px;
+  &__send_icon {
+    box-shadow: inset 0 0 0.5px 0.5px rgba(71, 114, 230, 1);
+    cursor: pointer;
+    color: var(--Personal-colors-main);
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    transition: all 0.5s ease;
 
-    &__input {
-      column-span: 2;
-      border-radius: 5px;
-      padding: 8px;
-      box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
-      width: 100%;
-      font-size: 10px;
-      min-width: 220px;
+    &:hover {
       color: #fff;
+      background: var(--Gradients-Gradient-1);
+      box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
 
-      &::placeholder {
-        color: #fff;
-      }
-      &:focus {
-        outline: none;
-      }
-    }
-
-    &__send_icon {
-      cursor: pointer;
-      color: var(--Personal-colors-main);
-      background: #fff;
-      border-radius: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50px;
-      transition: all 0.5s ease;
-
-      &:hover {
-        color: #fff;
-        background: var(--Gradients-Gradient-1);
-        box-shadow: 0 0 4px rgba(255, 255, 255, 0.7);
+      svg {
+        stroke: #fff;
       }
     }
   }
